end of section 1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
           Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
           falli deterruisset. No duo populo animal noluisse, enim
         </p>
-        <a href="https://github.com/SadiaMou007/SadiaMou007"> Explore Now</a>
+        <a class="link_btn" href="https://github.com/SadiaMou007/SadiaMou007">
+          Explore Now</a
+        >
+        <p>Scroll down to Explore more about us</p>
       </div>
 
       <div class="person1">
