2nd section and footer added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <h1>Stay Focused on</h1>
           <h1><span>Mission 2022</span></h1>
         </div>
-
         <p>
           Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
           falli deterruisset. No duo populo animal noluisse, enim
@@ -38,11 +37,56 @@
     </section>
 
     <section class="sec">
-      <div></div>
-      <div></div>
+      <h1 id="sec2_h1">My Mission in <span>2022</span></h1>
+      <div class="flexible-container">
+        <div class="container_items mission">
+          <img
+            src="images/illustrators/illustrator-1.png"
+            alt="image represent our mission"
+          />
+          <h3>Mission</h3>
+          <p>
+            To enhancing the business growth of our customers with creative
+            Design and Development to deliver market-defining high-quality
+            solutions that create value and consistent competitive advantage for
+            our clients around the world.
+          </p>
+        </div>
+        <div class="container_items vision">
+          <img
+            src="images/illustrators/illustrator-2.png"
+            alt="image represent our vision"
+          />
+          <h3>Vision</h3>
+          <p>
+            To become a prime performer, in providing quality Web, Print and
+            Software solutions in the competitive global market place.
+          </p>
+        </div>
+        <div class="container_items goals">
+          <img
+            src="images/illustrators/illustrator-3.png"
+            alt="image represent our goal"
+          />
+          <h3>Goals</h3>
+          <p>
+            The main objective when working as a developer is to be productive
+            and deliver value to the company. Our aim is to build practical
+            applications that will be 100% successful. To achieve this, specific
+            goals need to be set, which includes Working effectively in a team
+            and Improving performance metrics
+          </p>
+        </div>
+      </div>
     </section>
+
     <section class="sec"></section>
     <section class="sec"></section>
     <section class="sec"></section>
   </body>
+
+  <footer>
+    <h2>Mission <span id="mission_year">2022</span></h2>
+    <small>Author: @Sadia Islam</small>
+  </footer>
 </html>
