--- a/index.html
+++ b/index.html
@@ -15,76 +15,96 @@
   </head>
 
   <body>
-    <section class="flexible-container">
-      <div class="intro_text">
-        <div id="left_border">
-          <h1>Stay Focused on</h1>
-          <h1><span>Mission 2022</span></h1>
-        </div>
-        <p>
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset. No duo populo animal noluisse, enim
-        </p>
-        <a class="link_btn" href="https://github.com/SadiaMou007/SadiaMou007">
-          Explore Now</a
-        >
-        <p>Scroll down to Explore more about us</p>
-      </div>
-
-      <div class="person1">
-        <img src="images/person/person-2.png" alt="person1" />
-      </div>
-    </section>
-
-    <section class="sec">
-      <h1 id="sec2_h1">My Mission in <span>2022</span></h1>
-      <div class="flexible-container">
-        <div class="container_items mission">
-          <img
-            src="images/illustrators/illustrator-1.png"
-            alt="image represent our mission"
-          />
-          <h3>Mission</h3>
+    <main>
+      <section class="flexible-container">
+        <div class="intro_text">
+          <div id="left_border">
+            <h1>Stay Focused on</h1>
+            <h1><span>Mission 2022</span></h1>
+          </div>
           <p>
-            To enhancing the business growth of our customers with creative
-            Design and Development to deliver market-defining high-quality
-            solutions that create value and consistent competitive advantage for
-            our clients around the world.
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset. No duo populo animal noluisse, enim
           </p>
+          <a class="link_btn" href="https://github.com/SadiaMou007/SadiaMou007">
+            Explore Now</a
+          >
+          <p>Scroll down to Explore more about us</p>
         </div>
-        <div class="container_items vision">
-          <img
-            src="images/illustrators/illustrator-2.png"
-            alt="image represent our vision"
-          />
-          <h3>Vision</h3>
-          <p>
-            To become a prime performer, in providing quality Web, Print and
-            Software solutions in the competitive global market place.
-          </p>
-        </div>
-        <div class="container_items goals">
-          <img
-            src="images/illustrators/illustrator-3.png"
-            alt="image represent our goal"
-          />
-          <h3>Goals</h3>
-          <p>
-            The main objective when working as a developer is to be productive
-            and deliver value to the company. Our aim is to build practical
-            applications that will be 100% successful. To achieve this, specific
-            goals need to be set, which includes Working effectively in a team
-            and Improving performance metrics
-          </p>
-        </div>
-      </div>
-    </section>
 
-    <section class="sec"></section>
-    <section class="sec"></section>
-    <section class="sec"></section>
+        <div class="person1">
+          <img src="images/person/person-2.png" alt="person1" />
+        </div>
+      </section>
+
+      <section class="sec">
+        <h1 id="sec2_h1">My Mission in <span>2022</span></h1>
+        <div class="flexible-container">
+          <div class="container_items mission">
+            <img
+              src="images/illustrators/illustrator-1.png"
+              alt="image represent our mission"
+            />
+            <h3>Mission</h3>
+            <p>
+              To enhancing the business growth of our customers with creative
+              Design and Development to deliver market-defining high-quality
+              solutions that create value and consistent competitive advantage
+              for our clients around the world.
+            </p>
+          </div>
+          <div class="container_items vision">
+            <img
+              src="images/illustrators/illustrator-2.png"
+              alt="image represent our vision"
+            />
+            <h3>Vision</h3>
+            <p>
+              To become a prime performer, in providing quality Web, Print and
+              Software solutions in the competitive global market place.
+            </p>
+          </div>
+          <div class="container_items goals">
+            <img
+              src="images/illustrators/illustrator-3.png"
+              alt="image represent our goal"
+            />
+            <h3>Goals</h3>
+            <p>
+              The main objective when working as a developer is to be productive
+              and deliver value to the company. Our aim is to build practical
+              applications that will be 100% successful. To achieve this,
+              specific goals need to be set, which includes Working effectively
+              in a team and Improving performance metrics
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="flexible-container">
+        <div id="documentation">
+          <img id="d1" src="images/shapes/shape-1.png" alt="" />
+          <img id="d2" src="images/pictures/coding.png" alt="" />
+        </div>
+
+        <div class="container3">
+          <h1>Develop</h1>
+          <h1>Without Limits</h1>
+          <p>
+            We are passionate about helping you build internal capacity to offer
+            better learning experiences with your team. So you can maximize your
+            funding, keep your amazing staff, and empower young people.
+          </p>
+          <a class="link_btn" href="https://www.developmentwithoutlimits.org/">
+            Read the Documentation</a
+          >
+        </div>
+      </section>
+
+      <section class="sec"></section>
+      <section class="sec"></section>
+    </main>
   </body>
-
   <footer>
     <h2>Mission <span id="mission_year">2022</span></h2>
     <small>Author: @Sadia Islam</small>
