--- a/index.html
+++ b/index.html
@@ -101,7 +101,25 @@
         </div>
       </section>
 
-      <section class="sec"></section>
+      <section class="flexible-container">
+        <div id="documentation">
+          <img id="d1" src="images/shapes/shape-1.png" alt="" />
+          <img id="d2" src="images/pictures/coding.png" alt="" />
+        </div>
+
+        <div class="container3">
+          <h1>Develop</h1>
+          <h1>Without Limits</h1>
+          <p>
+            We are passionate about helping you build internal capacity to offer
+            better learning experiences with your team. So you can maximize your
+            funding, keep your amazing staff, and empower young people.
+          </p>
+          <a class="link_btn" href="https://www.developmentwithoutlimits.org/">
+            Read the Documentation</a
+          >
+        </div>
+      </section>
       <section class="sec"></section>
     </main>
   </body>
