--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
       </section>
 
       <section class="flexible-container">
-        <div id="documentation">
-          <img id="d1" src="images/shapes/shape-1.png" alt="" />
-          <img id="d2" src="images/pictures/coding.png" alt="" />
+        <div class="documentation">
+          <img src="images/pictures/coding1.png" alt="" />
         </div>
 
         <div class="container3">
@@ -102,22 +101,21 @@
       </section>
 
       <section class="flexible-container">
-        <div id="documentation">
-          <img id="d1" src="images/shapes/shape-1.png" alt="" />
-          <img id="d2" src="images/pictures/coding.png" alt="" />
-        </div>
-
         <div class="container3">
-          <h1>Develop</h1>
-          <h1>Without Limits</h1>
+          <h1>Know our</h1>
+          <h1>Global Community</h1>
           <p>
-            We are passionate about helping you build internal capacity to offer
-            better learning experiences with your team. So you can maximize your
-            funding, keep your amazing staff, and empower young people.
+            We work with Guatemalan communities as they respond to
+            climate-driven disasters, build sustainable, healthy futures and
+            connect to innovative digital finance tools.
           </p>
           <a class="link_btn" href="https://www.developmentwithoutlimits.org/">
             Read the Documentation</a
           >
+        </div>
+
+        <div class="documentation">
+          <img src="images/pictures/project1.png" alt="" />
         </div>
       </section>
       <section class="sec"></section>
