--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <h1><span>Mission 2022</span></h1>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-            falli deterruisset. No duo populo animal noluisse, enim
+            When your team need to kick off a project, hire a new employee,
+            deploy some code, review a sales contract.We belive website can
+            change peoples lives. <span>Is that Crazy???</span>
           </p>
           <a class="link_btn" href="https://github.com/SadiaMou007/SadiaMou007">
             Explore Now</a
@@ -38,7 +39,7 @@
       </section>
 
       <section class="sec">
-        <h1 id="sec2_h1">My Mission in <span>2022</span></h1>
+        <h1 class="sec2_h1">Our Mission in <span>2022</span></h1>
         <div class="flexible-container">
           <div class="container_items mission">
             <img
@@ -118,7 +119,58 @@
           <img src="images/pictures/project1.png" alt="" />
         </div>
       </section>
-      <section class="sec"></section>
+
+      <section class="sec">
+        <h1 class="sec2_h1">Our <span>recent Works</span></h1>
+
+        <div class="flexible-container">
+          <div class="container_items app_border">
+            <img src="images/person/person-1.png" alt="application image" />
+            <h2>App1</h2>
+            <p>
+              Manage your daily activity with <span>MyActivity app</span> It
+              provide confidentiality as well as security.If you need an easy
+              task manager.
+            </p>
+            <a
+              class="link_btn"
+              href="https://www.developmentwithoutlimits.org/"
+            >
+              Read more</a
+            >
+          </div>
+          <div class="container_items app_border">
+            <img src="images/pictures/app1.png" alt="application image" />
+            <h2>App1</h2>
+            <p>
+              Manage your daily activity with <span>MyActivity app</span> It
+              provide confidentiality as well as security.If you need an easy
+              task manager.
+            </p>
+            <a
+              class="link_btn"
+              href="https://www.developmentwithoutlimits.org/"
+            >
+              Read more</a
+            >
+          </div>
+          <div class="container_items app_border">
+            <img src="images/pictures/app2.png" alt="application image" />
+            <h2>App 3</h2>
+            <p>
+              Manage your Security with
+              <span>MySecurity app</span> It provide confidentiality as well as
+              security of your confidential programs.Go for MySecurity..
+            </p>
+            <a
+              class="link_btn"
+              href="https://www.developmentwithoutlimits.org/"
+            >
+              Read more</a
+            >
+          </div>
+        </div>
+      </section>
     </main>
   </body>
   <footer>
