Update on 66 january 2022

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </section>
 
       <section class="flexible-container">
-        <div class="documentation">
+        <div class="documentation1">
           <img src="images/pictures/coding1.png" alt="" />
         </div>
 
@@ -115,7 +115,7 @@
           >
         </div>
 
-        <div class="documentation">
+        <div class="documentation2">
           <img src="images/pictures/project1.png" alt="" />
         </div>
       </section>
@@ -124,9 +124,9 @@
         <h1 class="sec2_h1">Our <span>recent Works</span></h1>
 
         <div class="flexible-container">
-          <div class="container_items app_border">
+          <div class="card-items app_border">
             <img src="images/person/person-1.png" alt="application image" />
-            <h2>App1</h2>
+            <h2>App - 1</h2>
             <p>
               Manage your daily activity with <span>MyActivity app</span> It
               provide confidentiality as well as security.If you need an easy
@@ -139,9 +139,9 @@
               Read more</a
             >
           </div>
-          <div class="container_items app_border">
+          <div class="card-items app_border">
             <img src="images/pictures/app1.png" alt="application image" />
-            <h2>App1</h2>
+            <h2>App - 2</h2>
             <p>
               Manage your daily activity with <span>MyActivity app</span> It
               provide confidentiality as well as security.If you need an easy
@@ -154,13 +154,13 @@
               Read more</a
             >
           </div>
-          <div class="container_items app_border">
+          <div class="card-items app_border">
             <img src="images/pictures/app2.png" alt="application image" />
-            <h2>App 3</h2>
+            <h2>App - 3</h2>
             <p>
               Manage your Security with
               <span>MySecurity app</span> It provide confidentiality as well as
-              security of your confidential programs.Go for MySecurity..
+              security of your confidential programs.
             </p>
             <a
               class="link_btn"
@@ -172,9 +172,9 @@
         </div>
       </section>
     </main>
+    <footer>
+      <h2>Mission <span id="mission_year">2022</span></h2>
+      <small>Author: @Sadia Islam</small>
+    </footer>
   </body>
-  <footer>
-    <h2>Mission <span id="mission_year">2022</span></h2>
-    <small>Author: @Sadia Islam</small>
-  </footer>
 </html>
